--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,5 @@ markers =
     smoke: for smoke tests
     regression: for regression tests
     need_review: tests for review by other students
+    login_guest: for guest login
+    new_user: for new user
